syntax = "proto2";
option java_package = "com.markatta.akron";
option optimize_for = SPEED;

// nested objects

message Envelope {
    required int32 serializerId = 1;
    required string manifest = 2;
    required bytes payload = 3;
}


message Job {
    // id: UUID, recipient: ActorRef, message: Any, when: CronTrigger
    required string id = 1;
    required string recipient = 2;
    required Envelope message = 3;
    required string cronExpression = 4;
}

message RecentExecution {
    required string id = 1;
    required int64 timestamp = 2;
}


// top level persistent events

message JobScheduled {
    required Job job = 1;
    required int64 timestamp = 2;
    optional string who = 3;
}

message JobRemoved {
    required string id = 1;
    required int64 timestamp = 2;
    optional string who = 3;
}

message ScheduleSnapshot {
    repeated Job jobs = 1;
    repeated RecentExecution recentExecutions = 2;
}

// protocol for crontab (so it can be used in remotely/clustered)

message Schedule {
    required string recipient = 1;
    required Envelope message = 2;
    required string when = 3;
    required string replyTo = 4;
}

message Sheduled {
    required string id = 1;
    required string recipient = 2;
    required Envelope message = 3;
}

message UnSchedule {
    required string id = 1;
    required string replyTo = 2;
}

message UnScheduled {
    required string id = 1;
}

message GetListOfJobs {
    required string replyTo = 1;
}

message ListOfJobs {
    repeated Job jobs = 1;
}